--- a/AntiParseMembers.html
+++ b/AntiParseMembers.html
@@ -13,7 +13,7 @@
             <h1>Anti Parse Guild</h1>
             <nav>
                 <ul>
-                    <li><a href="AntiParseHome.html">Home</a></li>
+                    <li><a href="Index.html">Home</a></li>
                     <li><a href="AntiParseGuildListing.html">Guild Listing</a></li>
                     <li><a href="AntiParseMembers.html">Members</a></li>
                     <li><a href="AntiParseEvents.html">Events</a></li>
