--- a/AntiParseGuildListing.html
+++ b/AntiParseGuildListing.html
@@ -11,7 +11,7 @@
         <h1>Anti Parse</h1>
         <nav>
             <ul>
-                <li><a href="Index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="AntiParseGuildListing.html">Guild Listing</a></li>
                 <li><a href="AntiParseMembers.html">Members</a></li>
                 <li><a href="AntiParseEvents.html">Events</a></li>
