--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
         <h1>Anti Parse</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="Index.html">Home</a></li>
                 <li><a href="AntiParseGuildListing.html">Guild Listing</a></li>
                 <li><a href="AntiParseMembers.html">Members</a></li>
+                <li><a href="AntiParseContacts.html">Contact</a></li>
                 <li><a href="AntiParseEvents.html">Events</a></li>
-                <li><a href="AntiParseContacts.html">Contact Us</a></li>
+                <li><a href="AntiParseGallery.html">Gallery</a></li>
+                <li><a href="AntiParseLocation.html">Location</a></li>
             </ul>
         </nav>
     </header>
@@ -25,7 +27,7 @@
         <main>
             <section class="home">
                 <h2>Welcome to Anti Parse!</h2>
-                <p>Here is the Guild's current About Me of 8/18/2024:</p>
+                <p>Here is the Guild's current About Me:</p>
                 <img src="About_Me_8-18-24.png">
             </section>
         </main>
