--- a/AntiParseMembers.html
+++ b/AntiParseMembers.html
@@ -13,11 +13,13 @@
             <h1>Anti Parse Guild</h1>
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="Index.html">Home</a></li>
                     <li><a href="AntiParseGuildListing.html">Guild Listing</a></li>
                     <li><a href="AntiParseMembers.html">Members</a></li>
+                    <li><a href="AntiParseContacts.html">Contact</a></li>
                     <li><a href="AntiParseEvents.html">Events</a></li>
-                    <li><a href="AntiParseContacts.html">Contact Us</a></li>
+                    <li><a href="AntiParseGallery.html">Gallery</a></li>
+                    <li><a href="AntiParseLocation.html">Location</a></li>
                 </ul>
             </nav>
         </header>
