--- a/AntiParseLocation.html
+++ b/AntiParseLocation.html
@@ -43,7 +43,7 @@
         <h1>Your Current Location</h1>
         <nav>
             <ul>
-                <li><a href="Index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="AntiParseGuildListing.html">Guild Listing</a></li>
                 <li><a href="AntiParseMembers.html">Members</a></li>
                 <li><a href="AntiParseContacts.html">Contact</a></li>
