--- a/AntiParseEvents.html
+++ b/AntiParseEvents.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Events - Anti Parse</title>
     <link rel="stylesheet" href="AntiParse.css">
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="AntiParse.js" defer></script>
 </head>
 <body>
