--- a/AntiParseMembers.html
+++ b/AntiParseMembers.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Members - Anti Parse Guild</title>
     <link href="AntiParse.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="AntiParse.js" defer></script>
 </head>
 <body>
